snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-all.jar.sha256
a9c9150c6710efb5d52939d0d6e2365a03f1a2cd90cc0ddecde50228e37fd4a1